--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,19 @@
 {
   "manifest_version": 2,
 
-  "name": "Facebook Filter",
-  "description": "Blacklist topics, and filter your newsfeed",
+  "name": "Facebook Feed Filter",
+  "description": "Blacklist words and filter your newsfeed",
   "version": "1.0",
 
   "browser_action": {
     "default_icon": "popup/icon.png",
     "default_popup": "popup/index.html",
-    "default_title": "Facebook Filter"
+    "default_title": "Facebook Feed Filter"
   },
 
-  "permissions": [],
+  "permissions": [
+    "storage"
+  ],
 
   "content_scripts": [
     {
